# maximus

./: Cargo.toml  Dockerfile  README.md  index.md
.config/: default.config.json  default.config.toml
.docker/scripts/: build.sh  compose.sh  run.sh
.github/: dependabot.yml
.github/workflows/: docker.yml  rust.yml
maximus/: Cargo.toml  README.md
maximus/src/: main.rs
maximus/src/api/: interface.rs  mod.rs
maximus/src/api/endpoints/: index.rs  mod.rs
maximus/src/core/: context.rs  mod.rs  settings.rs
maximus/src/data/models/: items.rs  tokens.rs  users.rs
