[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "Maximus"
edition = "2021"
keywords = ["api", "restful"]
license = "MIT"
name = "maximus"
readme = "README.md"
repository = "https://github.com/FL03/maximus"
rust-version = "1.56.0"
version = "0.1.0"

[[bin]]
bench = false
name = "maximus"

[dependencies]
axum = { features = ["headers"], version = "0.5.11" }
bcrypt = "0.13.0"
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
chrono = "0.4.19"
config = "0.13.1"
diesel = "2.0.0-rc.0"
glob = "0.3.0"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.19" }
reqwest = "0.11.11"
serde = { features = ["derive"], version = "1.0.138" }
tokio = { features = ["full"], version = "1.19.2" }
tower = "0.4.13"
tower-http = { features = ["compression-br", "propagate-header", "sensitive-headers"], version = "0.3.4" }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[build-dependencies]

[dev-dependencies]
